# trading

./: .gitignore  .gitmodules  docker-compose.yml  server.Dockerfile
.github/: auto_assign.yml
app/trading/: .env-test  .env.server.example  .env.test  README.md  app.py  pyproject.toml
app/trading/pinkiepie_trading/: app.py  config.py  constants.py  exceptions.py
app/trading/pinkiepie_trading/clients/: constants.py  exceptions.py  yf.py
app/trading/pinkiepie_trading/coin/models/: bitcoin.py
app/trading/pinkiepie_trading/coin/repositories/: history_reader.py
app/trading/pinkiepie_trading/coin/services/: history_service.py
app/trading/pinkiepie_trading/database/: __init__.py  db.py
app/trading/pinkiepie_trading/stock/controllers/: __init__.py  stock_firm.py  stock_ticker.py
app/trading/pinkiepie_trading/stock/dtos/: stock_firm.py
app/trading/pinkiepie_trading/stock/models/: asset.py  price.py  stock_firm.py  ticker.py
app/trading/pinkiepie_trading/stock/repositories/: history_reader.py  history_writer.py  price_reader.py  price_writer.py  stock_asset_reader.py  stock_firm_reader.py  stock_firm_writer.py  ticker_reader.py  ticker_writer.py
app/trading/pinkiepie_trading/stock/schemas/: stock_firm.py  stock_ticker.py
app/trading/pinkiepie_trading/stock/services/: factory.py  stock_reader.py  stock_registerer.py
app/trading/pinkiepie_trading/stock/tasks/: hourly_price.py
app/trading/pinkiepie_trading/utils/: async_helper.py
app/trading/tests/: conftest.py
app/trading/tests/bitcoin/: test_history_reader_repository.py  test_history_service.py  test_model.py
app/trading/tests/stock/models/: test_stock_firm.py  test_stock_ticker.py
app/trading/tests/stock/repositories/: test_firm_reader.py  test_firm_writer.py  test_history_reader.py  test_history_wirter.py  test_price_reader.py  test_price_writer.py  test_stock_asset_reader.py  test_ticker_reader.py  test_ticker_writer.py
app/trading/tests/stock/services/: test_stock_registerer.py
