[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target_version = ['py37']
include = '\.pyi?$'

[tool.poetry]
name = "trading"
version = "0.1.0"
description = ""
authors = ["pinkiepie"]

[tool.poetry.dependencies]
python = "^3.9"
trading-db = {path = "../../lib/trading-db", develop = true}
trading-strategy = {path = "../../lib/trading-strategy", develop = true}

[tool.poetry.dev-dependencies]
python-dotenv = "^0.15.0"
# test
pytest = "^6.2.2"
# Lint
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
