[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target_version = ['py37']
include = '\.pyi?$'

[tool.poetry]
name = "trading"
version = "0.1.0"
description = ""
authors = ["pinkiepie"]

[tool.poetry.dependencies]
python = "^3.9"
trading-db = {path = "../../lib/trading-db", develop = true}
#trading-strategy = {path = "../../lib/trading-strategy", develop = true}

# Price history
yahoofinancials = "^1.6"
fastapi = "^0.63.0"

# Airflow
#apache-airflow = {extras = ["celery", "docker", "mysql"], version = "^2.1.4"}


# dot env
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
# Test
pytest = "^6.2.2"

# Lint
pre-commit = "^2.11.1"
flake8 = "^3.9.0"
mypy = "^0.910"
freezegun = "^1.1.0"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
